--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -48,7 +48,7 @@
      </sizepolicy>
     </property>
     <property name="text">
-     <string>Playlist:</string>
+     <string>Playlist</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="playlistText">
@@ -359,6 +359,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="saveButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>215</x>
@@ -369,6 +372,54 @@
     </property>
     <property name="text">
      <string>Save...</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="searchButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>220</y>
+      <width>500</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start Search</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pauseButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>220</y>
+      <width>80</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pause</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="stopButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>220</y>
+      <width>80</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Stop</string>
     </property>
    </widget>
   </widget>
